# HeadsetControl-Qt

./: .gitignore  .qmlls.ini  CMakeLists.txt  HeadsetControl-Qt.pro  PKGBUILD  README.md  design.py  design.ui  headsetcontrol-qt.py  install.sh  main.cpp  requirements.txt  setup.py  tr_script.py
.github/: FUNDING.yml
.github/workflows/: build-and-release.yaml  build-and-release.yml  build.yaml  build.yml  main.yml  qt-linux-build.yml  qt-msvc-build-and-release.yml  qt-msvc-build.yml  release.yml
HIDEventMonitor/: HIDEventMonitor.cpp
HeadsetControlQt/: HeadsetControlQt.cpp  HeadsetControlQt.h
Resources/: resources.qrc
Resources/qml/: Main.qml
Resources/tr/: HeadsetControl-Qt_de.ts  HeadsetControl-Qt_en.ts  HeadsetControl-Qt_es.ts  HeadsetControl-Qt_fr.ts  HeadsetControl-Qt_hu.ts  HeadsetControl-Qt_it.ts  HeadsetControl-Qt_tr.ts
ShortcutManager/: ShortcutManager.h
Utils/: Utils.cpp  Utils.h
Worker/: Worker.cpp
i18n/: HeadsetControl-Qt_de.ts  HeadsetControl-Qt_en.ts  HeadsetControl-Qt_es.ts  HeadsetControl-Qt_fr.ts  HeadsetControl-Qt_hu.ts  HeadsetControl-Qt_it.ts  HeadsetControl-Qt_tr.ts
include/: headsetcontrolchecker.h  headsetcontrolqt.h  hideventmonitor.h  shortcutmanager.h  utils.h
qml/: HeadsetcontrolPrompt.qml  Main.qml
src/: color_utils.py  design.py  headsetcontrol-qt.py  headsetcontrolchecker.cpp  headsetcontrolqt.cpp  hideventmonitor.cpp  main.cpp  setup.py  shortcutmanager.cpp  ui_mainwindow.py  utils.cpp  utils.py  worker.cpp
src/HeadsetControlQt/: headsetcontrolqt.cpp  headsetcontrolqt.h  headsetcontrolqt.ui
src/Resources/: appicon.rc  resources.qrc  translations.qrc
src/Resources/tr/: HeadsetControl-Qt_de.ts  HeadsetControl-Qt_en.qm  HeadsetControl-Qt_en.ts  HeadsetControl-Qt_es.ts  HeadsetControl-Qt_fr.qm  HeadsetControl-Qt_fr.ts  HeadsetControl-Qt_hu.ts  HeadsetControl-Qt_it.ts
src/ShortcutManager/: shortcutmanager.cpp  shortcutmanager.h
src/Utils/: utils.cpp  utils.h
src/Worker/: worker.h
src/designer/: ui_mainwindow.ui
src/tr/: headsetcontrol-qt_de.ts  headsetcontrol-qt_en.qm  headsetcontrol-qt_en.ts  headsetcontrol-qt_es.ts  headsetcontrol-qt_fr.qm  headsetcontrol-qt_fr.ts
src/ui/: design.ui
